--- a/webapp/src/sprites/_sprite.scss
+++ b/webapp/src/sprites/_sprite.scss
@@ -8,3 +8,8 @@
 	height: 42px;
 }
 
+.svg-playlist-play-dims {
+	width: 24px;
+	height: 24px;
+}
+
